--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ node_modules
 # testing
 coverage
 
-# production
+# courseion
 .next
 .swc
 _static
@@ -21,7 +21,7 @@ build
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+.env.courseion.local
 
 # misc
 .DS_Store
