--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "react-typing-effect": "^2.0.5",
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
